<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:text="@string/music_exit" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/music_menu" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/next_btn"
                android:layout_width="@dimen/center_button_size"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/m_previous" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/button5"
                android:layout_width="@dimen/center_button_size"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_ok" />

            <Button
                android:id="@+id/button4"
                android:layout_width="@dimen/center_button_size"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="58dp"
                android:layout_toLeftOf="@+id/button5"
                android:text="@string/v_sub" />

            <Button
                android:id="@+id/button6"
                android:layout_width="@dimen/center_button_size"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="58dp"
                android:layout_toRightOf="@+id/button5"
                android:text="@string/v_add" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/last_btn"
                android:layout_width="@dimen/center_button_size"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/m_next" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center" >

        <Button
            android:id="@+id/video_btn"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:text="@string/music_mode" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textOn="@string/tv_open" 
            android:textOff="@string/tv_close"
            />
    </RelativeLayout>

</LinearLayout>