<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_large" >

            <Button
                android:id="@+id/up_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/curtain_down" />

            <Button
                android:id="@+id/down_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/curtain_up" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/pause_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/curtain_stop" />

            <Button
                android:id="@+id/lock_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/lock" />

            <Button
                android:id="@+id/light_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/curtain_light" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>