<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="210dp"
    android:background="@color/setting_top_bg"
    android:orientation="vertical" 
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
         android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ip_tv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/setting_ip" />

        <EditText
            android:id="@+id/ip_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" 
            android:inputType="textNoSuggestions"
            >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/port_tv"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/setting_port" />


        <EditText
            android:id="@+id/port_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" 
            android:inputType="numberSigned"
            >

        </EditText>

    </LinearLayout>
    
       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
           android:gravity="center" >

           <Button
               android:id="@+id/connect_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_weight="1"
               android:text="@string/setting_save" />

           <Button
               android:id="@+id/reset_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_weight="1"
               android:text="@string/setting_cancel" />
       </LinearLayout>

       </LinearLayout>
