<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large" >

        <Button
            android:id="@+id/mode_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/music_mode" />

        <ToggleButton
            android:id="@+id/heating_witch"
            android:layout_width="@dimen/button_size"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg"
            android:text="ToggleButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_large" >

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/t_add" />

        <Button
            android:id="@+id/sub_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/t_sub" />
    </LinearLayout>

</LinearLayout>